--- a/main.css
+++ b/main.css
@@ -1,18 +1,24 @@
 #drag {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 60px);
 }
 
 .presets {
     background: #dee;
+    position: fixed;
+    width: 20%;
+    top: 0; left: 80%;
+    bottom: 0;
+    overflow: scroll;
 }
-.one, .presets {
-    height: 100vh;
-    display: block;
-    position: relative;
+.one {
+    position: fixed;
+    width: 80%;
+    top: 60px; left: 0;
+    height: calc(100vh - 60px);
+    overflow: scroll;
 }
 .bg {
-    /*margin: 10px 0px;*/
     background: #f6f6f6;
     padding: 10px;
     transition: .s2;
@@ -29,15 +35,38 @@
     background: #ffee44;
 }
 
+#drag .after {
+    position: relative;
+}
 #drag .bg {
     background: none;
 }
 
 #drag .bg:hover {
-    background: #f6f6f6
+    background: #f6f6f6;
+}
+#drag .after:after {
+    content: '';
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #fee324;
+    border: 1px solid #e6ca00;
+    cursor: pointer;
+}
+#drag .after:hover:after {
+    display: block;
 }
 .remove {
     padding: 20px;
     text-align: center;
     background: #fff4f4;
+    position: fixed;
+    top: 0; left: 0; 
+    height: auto;
+    width: 80%;
 }
